<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Proverbial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="COLOR">COLOR</string>
    <string name="TOAST">TOAST</string>
    <string name="TEXT">TEXT</string>
    <string name="NOTIFICATION">NOTIFICATION</string>
    <string name="SPEED_TEST">SPEED TEST</string>
    <string name="GEOLOCATION">GEOLOCATION</string>
    <string name="Browser">Browser</string>
    <string name="Find">Find</string>
</resources>