<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Textbox"
            android:layout_width="374dp"
            android:layout_height="121dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:gravity="center_horizontal"
            android:text="Hello! Welcome to lambdatest Sample App called Proverbial"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"></TextView>

        <Button
            android:id="@+id/Text"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginEnd="214dp"
            android:layout_marginRight="214dp"
            android:layout_marginBottom="326dp"
            android:background="@drawable/button"
            android:text="@string/TEXT"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

        <Button
            android:id="@+id/color"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginEnd="215dp"
            android:layout_marginRight="215dp"
            android:layout_marginBottom="417dp"
            android:background="@drawable/button"
            android:text="@string/COLOR"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

        <Button
            android:id="@+id/geoLocation"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="417dp"
            android:background="@drawable/button"
            android:text="@string/GEOLOCATION"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

        <Button
            android:id="@+id/toast"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginEnd="214dp"
            android:layout_marginRight="214dp"
            android:layout_marginBottom="236dp"
            android:background="@drawable/button"
            android:text="@string/TOAST"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

        <Button
            android:id="@+id/notification"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="328dp"
            android:background="@drawable/button"
            android:text="@string/NOTIFICATION"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

        <Button
            android:id="@+id/speedTest"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="238dp"
            android:background="@drawable/button"
            android:text="@string/SPEED_TEST"
            android:textColor="@color/white"
            app:backgroundTint="#0EBAC5" />

    </RelativeLayout>

</FrameLayout>